# proyecto-visualizacion-datos

./: pyproject.toml
data/: data_preparation.ipynb  data_preparation.py
data/Parados_crudo/: Paro_por_municipios_2013_csv.csv
data/contratos/: Contratos_por_municipios_2013_csv.csv
data/dtes_empleo/: Dtes_empleo_por_municipios_2013_csv.csv
data/poblacion/: ine_poblacion_2855.csv  ine_poblacion_2856.csv  ine_poblacion_2857.csv  ine_poblacion_2858.csv  ine_poblacion_2859.csv  ine_poblacion_2860.csv  ine_poblacion_2861.csv  ine_poblacion_2862.csv  ine_poblacion_2863.csv  ine_poblacion_2864.csv  ine_poblacion_2865.csv  ine_poblacion_2866.csv  ine_poblacion_2868.csv  ine_poblacion_2869.csv  ine_poblacion_2870.csv  ine_poblacion_2871.csv  ine_poblacion_2872.csv  ine_poblacion_2873.csv  ine_poblacion_2874.csv  ine_poblacion_2875.csv  ine_poblacion_2876.csv  ine_poblacion_2877.csv  ine_poblacion_2878.csv  ine_poblacion_2879.csv  ine_poblacion_2880.csv  ine_poblacion_2881.csv  ine_poblacion_2882.csv  ine_poblacion_2883.csv  ine_poblacion_2884.csv  ine_poblacion_2885.csv  ine_poblacion_2886.csv  ine_poblacion_2888.csv  ine_poblacion_2889.csv  ine_poblacion_2890.csv  ine_poblacion_2891.csv  ine_poblacion_2892.csv  ine_poblacion_2893.csv  ine_poblacion_2894.csv  ine_poblacion_2895.csv  ine_poblacion_2896.csv  (+9 more)
limpieza_datos/: data.ipynb
proyecto_paro/: app2.R  appMap.R  appSer.R  limpieza_contratos.R  limpieza_poblacion.R  preprocessing.R  processing_sepe.R  prueba.R  read_data.R
proyecto_paro/data/contratos/: Contratos_por_municipios_2010_csv_processed.csv  (+15 more)
(+34 files in other folders)
